[package]
name = "decomposer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
decomposer_engine={ path="../decomposer_engine" }
rand = "0.10.0"
serde_json = "1.0.149"
tap = "1.0.1"
tokio = { version = "1.50.0", features = ["full"] }
[patch.crates-io]
xgboost-sys= { path= "../decomposer_engine/patches/xgboost-sys" }
