[package]
name = "decomposer_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.2"
polars = { version = "0.53.0", features = ["lazy", "parquet", "is_in", "ndarray"] }
rand = "0.10.0"
tap = "1.0.1"
xgboost = { version= "0.1.4"}
[patch.crates-io]
xgboost-sys= { path= "../patches/xgboost-sys" }
