[package]
name = "decomposer_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.1", features= ["tui", "train", "wgpu"] }
ndarray = "0.17.2"
polars = { version = "0.53.0", features = ["lazy", "parquet", "is_in", "ndarray", "dynamic_group_by"] }
rand = "0.10.0"
rayon = "1.11.0"
regex = "1.12.3"
tap = "1.0.1"
xgboost = { version= "0.1.4"}
[patch.crates-io]
xgboost-sys= { path= "../patches/xgboost-sys" }
